hphp/test/slow/as-expression/lvalue-error.php.expectf
Fatal error: as_expression is not allowed in write context in %s on line 5
